--- a/WPFDemo/LearnApp.Win/View/UserLiquidTrend.xaml
+++ b/WPFDemo/LearnApp.Win/View/UserLiquidTrend.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="LearnApp.Win.View.UserLiquidTrend"
+﻿<!--<UserControl x:Class="LearnApp.Win.View.UserLiquidTrend"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,4 +11,19 @@
     <Grid Margin="0">
         <lvc:CartesianChart  x:Name="chart"  XAxes="{Binding XAxes}" YAxes="{Binding YAxes}" Series="{Binding Series}" Margin="10" />
     </Grid>
+</UserControl>-->
+
+<UserControl x:Class="LearnApp.Win.View.UserLiquidTrend"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:LearnApp.Win.View"
+             mc:Ignorable="d"  
+             xmlns:ll="clr-namespace:LiveChartsCore.Defaults;assembly=LiveChartsCore"
+             d:DesignHeight="450" d:DesignWidth="800">
+    <Grid Margin="0">
+
+    </Grid>
 </UserControl>
+
